# rura

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DATABASE.md  PROTOCOL.md  README.md  README_AUTH.md  README_DB.md
.github/workflows/: tests.yml
crates/client/: Cargo.toml
crates/client/flutter_app/: .metadata  pubspec.yaml
crates/client/flutter_app/lib/: main.dart
crates/client/flutter_app/lib/frb/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
crates/client/src/: api.rs  bridge_generated.rs  lib.rs
crates/client/tests/: tls_auth_e2e.rs
crates/models/: Cargo.toml
crates/models/src/: client_message.rs  lib.rs  messaging.rs
crates/rura_client/: Cargo.toml
crates/rura_client/src/: lib.rs
crates/rura_models/src/: lib.rs
crates/rura_server/: Cargo.toml
crates/rura_server/src/: lib.rs  main.rs
crates/rura_server/src/auth/: handlers.rs  responses.rs
crates/rura_server/src/client/: io_helpers.rs  mod.rs
crates/rura_server/src/messaging/: handlers.rs  mod.rs
crates/rura_server/src/models/: args.rs  mod.rs
crates/rura_server/src/utils/: get_local_ip.rs  mod.rs  tls.rs
crates/rura_server/tests/: app_state_tests.rs  end_to_end_messaging.rs  integration_tests.rs  messaging_tests.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/auth/: handlers.rs  mod.rs  (+2 more)
crates/server/tests/: app_state_tests.rs  e2ee_tests.rs  end_to_end_messaging.rs  history_tests.rs  instant_bidirectional.rs  integration_tests.rs  messaging_tests.rs
docs/: ARCHITECTURE.md  DATABASE.md  E2EE.md  FRB_SETUP.md  PROTOCOL.md  STYLE.md
scripts/: frb_codegen.sh  init_flutter_client.sh  run_client.sh  run_server.sh
src/: client.rs  lib.rs  main.rs
src/auth/: README.md  handlers.rs  mod.rs  responses.rs  tests.rs
src/client/: authed.rs  dispatch.rs  io_helpers.rs  loop_task.rs  mod.rs  unauth.rs
src/messaging/: handlers.rs  mod.rs  models.rs  state.rs
src/models/: args.rs  client_message.rs  mod.rs
src/utils/: db_utils.rs  get_local_ip.rs  mod.rs  tls.rs
tests/: README.md  app_state_tests.rs  end_to_end_messaging.rs  integration_tests.rs  messaging_tests.rs
(+14 files in other folders)
