[package]
name = "conduit"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util"] }