[package]
name = "rura"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util"] }
